After adding Insert Delete update and view methods

--- a/IT3030PAF2021_Y3S1.02.1_IT_26/WebContent/WEB-INF/web.xml
+++ b/IT3030PAF2021_Y3S1.02.1_IT_26/WebContent/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 
 <servlet-mapping>
  <servlet-name>Jersey Web Application</servlet-name>
- <url-pattern>/OrderPaymentService/*</url-pattern>
+ <url-pattern>/PaymentService/*</url-pattern>
 </servlet-mapping>
 
 <servlet-mapping>
